fix: controllerを修正
